// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert validation should render error styling correctly 1`] = `
<Well
  className="c-callout--error "
  data-garden-id="notifications.alert"
  data-garden-version="version"
  type="error"
/>
`;

exports[`Alert validation should render success styling correctly 1`] = `
<Well
  className="c-callout--success "
  data-garden-id="notifications.alert"
  data-garden-version="version"
  type="success"
/>
`;

exports[`Alert validation should render warning styling correctly 1`] = `
<Well
  className="c-callout--warning "
  data-garden-id="notifications.alert"
  data-garden-version="version"
  type="warning"
/>
`;
